--- a/src/index.css
+++ b/src/index.css
@@ -64,34 +64,28 @@ footer {
     font-size: 8px;
     font-weight: 400;
   }
-}
 
-@media screen and (max-width: 600px) {
-  .navbaar {
-    padding: 20px 5px 20px 5px;
+  .logo {
+    font-size: 20px;
+    letter-spacing: -1px;
+    color: #000;
+    padding-left: 30px;
+    font-weight: 600;
   }
-}
 
-.logo {
-  font-size: 20px;
-  letter-spacing: -1px;
-  color: #000;
-  padding-left: 30px;
-  font-weight: 600;
-}
+  .navlnk {
+    color: #000;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 0 6px 0 6px;
+  }
 
-.navlnk {
-  color: #000;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 0 16px 0 16px;
-}
-
-.navlnk:hover {
-  color: #000;
-  font-size: 14px;
-  border-bottom: 4px solid #0066ff;
-  font-weight: 500;
+  .navlnk:hover {
+    color: #000;
+    border-bottom: 3px solid #0066ff;
+    font-weight: 500;
+    transition: 0.1s ease-in-out;
+  }
 }
 
 /* -------SECTION 1 (S1)------- */
@@ -122,6 +116,19 @@ footer {
 @media screen and (min-width: 601px) {
   .sctn_two {
     min-height: 60vh;
+  }
+
+  .slider {
+    margin: 0 40px 0 40px;
+  }
+
+  .rec.rec-dot {
+    background-color: #0066ff;
+  }
+
+  .rec.rec-arrow {
+    color: #0066ff;
+    background-color: #f5f7f8;
   }
 }
 
