--- a/src/index.css
+++ b/src/index.css
@@ -69,8 +69,25 @@ footer {
     font-size: 20px;
     letter-spacing: -1px;
     color: #000;
+
     padding-left: 30px;
     font-weight: 600;
+  }
+
+  .tulogo {
+    padding-left: 30px;
+  }
+  br {
+    line-height: 0.2;
+  }
+
+  .logo2 {
+    font-size: 12px;
+    letter-spacing: -1px;
+    color: #000;
+    padding-left: 30px;
+    margin-top: -30px;
+    font-weight: 400;
   }
 
   .navlnk {
@@ -80,10 +97,23 @@ footer {
     padding: 0 6px 0 6px;
   }
 
+  .navlnk1 {
+    color: #0066ff;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 0 6px 0 6px;
+  }
+
   .navlnk:hover {
     color: #000;
     border-bottom: 3px solid #0066ff;
     font-weight: 500;
+    transition: 0.1s ease-in-out;
+  }
+
+  .navlnk1:hover {
+    color: #0040a0;
+    border-bottom: 3px solid #0066ff;
     transition: 0.1s ease-in-out;
   }
 }
@@ -96,19 +126,22 @@ footer {
 
   .cdiv1 {
     text-align: center;
-    border: 1.5px solid #000;
-    margin: 60px 140px 60px 140px;
-    padding: 80px 60px;
+    margin-top: -60px;
   }
+
   .stext1 {
-    color: #000;
+    color: #141414;
     font-size: 30px;
     font-weight: 800;
     letter-spacing: -1px;
+    margin-top: 10px;
   }
   .stext2 {
-    color: #000;
+    color: #141414;
     font-size: 16px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    margin-bottom: 100px;
   }
 }
 
@@ -123,12 +156,24 @@ footer {
   }
 
   .rec.rec-dot {
-    background-color: #0066ff;
+    visibility: hidden;
   }
 
   .rec.rec-arrow {
     color: #0066ff;
     background-color: #f5f7f8;
+  }
+  .slide {
+    text-align: center;
+    color: #141414;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 40px 0 60px 0;
+  }
+
+  .slidetext:hover {
+    border-bottom: 3px solid #0066ff;
+    transition: 0.1s ease-in-out;
   }
 }
 
@@ -143,7 +188,8 @@ footer {
   }
 
   .acttext:hover {
-    border-bottom: 4px solid #0066ff;
+    border-bottom: 3px solid #0066ff;
+    transition: 0.1s ease-in-out;
   }
 }
 /* -------SECTION Odd()------- */
@@ -171,5 +217,10 @@ footer {
   }
   .tnpcontainer {
     padding: 0 60px 0 60px;
+  }
+
+  .tnp2 {
+    margin-top: 80px;
+    margin-left: 160px;
   }
 }
