--- a/src/index.css
+++ b/src/index.css
@@ -224,3 +224,13 @@ footer {
     margin-left: 160px;
   }
 }
+
+/* -------SECTION 3(S2)------- */
+
+.recruitcon2 {
+  padding-top: 240px;
+}
+
+.recruitrow1 {
+  margin: 40px 0 40px 0;
+}
