--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 /* -------BODY------- */
 main {
   min-height: 80vh;
-  background-color: #fafafd;
+  background-color: #fff;
 }
 
 /* -------SCROLLBAR------- */
@@ -34,13 +34,13 @@ footer {
 
 .f1 {
   color: rgb(238, 245, 255);
-  font-size: 13px;
+  font-size: 13.5px;
   font-weight: 600;
 }
 
 .f2 {
   color: rgb(238, 245, 255);
-  font-size: 9px;
+  font-size: 9.5px;
   font-weight: 400;
 }
 
@@ -67,7 +67,7 @@ footer {
   .navbaar {
     min-height: 20vh;
     padding: 12px 20px 12px 20px;
-    background-color: #fafafd;
+    background-color: #fff;
     z-index: 2;
   }
 
@@ -151,6 +151,37 @@ footer {
   .stext2 {
     color: #141414;
     font-size: 16px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    margin-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .sctn_one {
+    min-height: 60vh;
+  }
+
+  .tnp1 {
+    height: 140px;
+    width: 300px;
+  }
+
+  .cdiv1 {
+    text-align: center;
+    margin-top: -60px;
+  }
+
+  .stext1 {
+    color: #141414;
+    font-size: 24px;
+    font-weight: 800;
+    letter-spacing: -1px;
+    margin-top: 10px;
+  }
+  .stext2 {
+    color: #141414;
+    font-size: 14px;
     font-weight: 600;
     letter-spacing: -1px;
     margin-bottom: 100px;
