--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,11 @@ footer {
     border-bottom: 3px solid #0066ff;
     transition: 0.1s ease-in-out;
   }
+
+  .more {
+    color: #fff;
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -352,6 +357,16 @@ footer {
 .eventcontainer {
   text-align: center;
   justify-content: center;
+}
+
+/* ----------About---------- */
+.aboutcontainer {
+  min-height: 80vh;
+}
+
+/* ----------Stories--------------- */
+.storiescontainer {
+  min-height: 80vh;
 }
 /* ---------------- */
 /* ---------------- */
