--- a/src/index.css
+++ b/src/index.css
@@ -360,6 +360,9 @@ footer {
 }
 .etext1 {
   text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 10px;
 }
 
 .etext2 {
@@ -371,7 +374,8 @@ footer {
 
 .etext3 {
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  font-size: 14px;
 }
 .event1 {
   text-align: center;
