--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,10 @@ footer {
   text-decoration: none;
 }
 
+.link1:hover {
+  color: rgb(255, 255, 255);
+}
+
 .f1 {
   color: rgb(238, 245, 255);
   font-size: 13.5px;
@@ -132,11 +136,6 @@ footer {
     color: #0040a0;
     border-bottom: 3px solid #0066ff;
     transition: 0.1s ease-in-out;
-  }
-
-  .more {
-    color: #fff;
-    font-size: 12px;
   }
 }
 
@@ -461,6 +460,38 @@ footer {
   right: 0;
 }
 
+/* --------PLACEMENT-------- */
+
+.select {
+  background-color: #f5f7f8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.placecon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+.pb {
+  padding-right: 50px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.tablecon {
+  width: 80%;
+}
+.tablecon1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /* ----------Visitor---------- */
 
 .viscon {
