--- a/src/index.css
+++ b/src/index.css
@@ -234,6 +234,10 @@
     min-height: 60vh;
   }
 
+  .sctn_recruit {
+    min-height: 60vh;
+  }
+
   .smallscreens1 {
     display: none;
   }
@@ -1029,5 +1033,28 @@
 
   .sfourcon1 {
     display: none;
+  }
+
+  .a3 {
+    color: #1b1b1b;
+    font-size: 18px;
+    font-weight: 900;
+    margin: 16px 0 16px 0;
+  }
+
+  .a4 {
+    color: #636363;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: justify;
+    text-justify: inter-word;
+  }
+
+  .tnpcontainer1 {
+    padding: 0 10px;
+  }
+
+  .sctn_recruit {
+    min-height: 60vh;
   }
 }
