--- a/src/index.css
+++ b/src/index.css
@@ -1058,3 +1058,46 @@
     min-height: 60vh;
   }
 }
+
+/* --------PLACEMENT(small)-------- */
+@media screen and (max-width: 600px) {
+  .select {
+    background-color: #f5f7f8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 76%;
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+  .placecon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 40px;
+  }
+  .pb {
+    padding-right: 50px;
+    font-size: 14px;
+    font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
+  }
+
+  .tablecon3 {
+    width: 80%;
+    overflow: auto;
+  }
+  .tablecon2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .tablecon1 {
+    display: none;
+  }
+}
